# orchspec

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml  skills.md  technical.md
docs/: changelog.md  compiler-guide.md  execution-modes.md  field-reference.md
samples/pipespecs/: README.md
spec/: orchspec-spec-v1.md  orchspec_schema_v1.json  pipespec_profile_v1.json
spec/examples/orchspec/: airvisual_pipeline.orchspec.yaml  digital_marketing_pipeline.orchspec.yaml
spec/mappings/: pipespec_to_opos_v1.json  pipespec_to_orchspec_v1.json
src/opos_validator/compiler/: mapper.py
src/opos_validator/validation/: semantic.py
src/orchspec_validator/: __init__.py  io.py
src/orchspec_validator/adapters/: __init__.py  airflow_projector.py  argo_projector.py  dagster_projector.py  interface.py  invariants.py  models.py  prefect_projector.py  registry.py  stubs.py
src/orchspec_validator/cli/: compile.py  diff.py  validate.py
src/orchspec_validator/compiler/: api.py  mapper.py  mapping_spec.py  models.py  profile.py
src/orchspec_validator/diff/: api.py  core.py  models.py
src/orchspec_validator/validation/: api.py  models.py  schema.py  semantic.py
tests/: test_adapters.py  test_airflow_advanced.py  test_cli.py  test_compiler.py  test_compiler_edge_cases.py  test_diff.py  test_diff_edge_cases.py  test_golden.py  test_prefect_dagster_argo.py  test_profile_and_mapping.py  test_schema_validation_edge_cases.py  test_semantic_strict.py  test_validation.py
tests/fixtures/golden/: airvisual_pipeline.orchspec.json  (+2 more)
tools/: golden.py
(+2 files in other folders)
