[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchspec"
version = "1.1.0"
description = "Open Pipeline Orchestration Specification — compiler, validator, diff, and extensible multi-orchestrator adapter toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "OrchSpec Contributors"}]
dependencies = [
  "jsonschema>=4.22.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
orchspec-validate = "orchspec_validator.cli.validate:main"
orchspec-diff = "orchspec_validator.cli.diff:main"
pipespec2orchspec = "orchspec_validator.cli.compile:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
